# ai-growth-analyst-agent

./: .env.example  Dockerfile  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: lint.yml
app/: config.py  logging.py  main.py
app/agent/: agent.py  tools.py
app/agent/tools/: __init__.py  google_ads.py  google_analytics.py  google_search_console.py  utils.py
app/clients/: google_ads_client.py  google_analytics_client.py  google_search_console_client.py
app/errors/: error.py  handlers.py
app/routers/: chat.py
app/utils/: chat_utils.py
tests/: test_chat.http
