[project]
name = "ai-growth-analyst-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "langgraph>=0.0.40",
    "langchain-openai>=0.0.5",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "langchain>=0.3.27",
    "pydantic-settings>=2.10.1",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
]

[tool.ruff]
target-version = "py313"
line-length = 120
extend-exclude = ["venv", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"app/agent/tools/**" = ["E501"]

[tool.ruff.format]
quote-style = "double"
